# ghidra-rpc-win

./: .gitignore  AGENTS.md  README.md  SKILL.md  package.json  pyproject.toml
.pi/prompts/: process-feedback.md
docs/: install.md  internals.md  quickstart.md  troubleshooting.md
docs/flows/: binary-audit.md  patch-analysis.md  vulnerability-research.md
ghidra_rpc/: __init__.py  cli.py  client.py  daemon.py  session.py  transport.py
ghidra_rpc/server/: __init__.py  _gui_launcher.py  context.py  launcher.py  main.py
ghidra_rpc/server/tools/: __init__.py  analysis.py  bookmarks.py  cfg.py  data_types.py  decompiler.py  disassembly.py  memory.py  modifications.py  navigation.py  processor_context.py  search.py  tags.py  version_tracking.py  xrefs.py
tests/: test_client.py  test_integration.py  test_protocol.py  test_session_registry.py  test_tools.py
tests/fixtures/: README.md  testapp  testapp.c
