[project]
name = "ghidra-rpc"
version = "0.1.0"
description = "CLI-driven daemon exposing Ghidra reverse engineering capabilities over a local RPC endpoint"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyghidra>=2.2.1",
    "click>=8.1.0",
    "jpype1>=1.5.0",
]
keywords = [
    "ghidra",
    "reverse-engineering",
    "decompiler",
    "binary-analysis",
    "pi-package",
]

[project.scripts]
ghidra-rpc = "ghidra_rpc.cli:main"
ghidra-rpcd = "ghidra_rpc.daemon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ghidra_rpc"]

[tool.pi]
skills = ["./SKILL.md"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
